grammar.js
    nedfile: ($) =>
      prec.right(
        repeat(
          choice(
            $.package,
            $.import,
            $.property_decl,
            alias(seq($._property_namevalue, ";"), $.property),
            $.channel,
            $.channel_interface,
            $.simple,
            $.module,
            $.network,
            $.moduleinterface,
            ";",
          ),
        ),
      ),

    // a single `//` comment line; `\`-continuation extends it to the next line
    comment: ($) => token(seq("//", /(\\+(.|\r?\n)|[^\\\n])*/)),

    property_decl: ($) =>
      choice(
        seq($.property_decl_header, optional($.inline_properties), ";"),
        seq(
          $.property_decl_header,
          "(",
          optional($.property_decl_keys),
          ")",
          optional($.inline_properties),
          ";",
        ),
      ),

    property_decl_header: ($) =>
      choice(
        seq("property", "@", field("name", alias($._NAME, $.name)), "[", "]"),
        seq("property", "@", field("name", alias($._NAME, $.name))),
      ),

    property_decl_keys: ($) =>
      seq($.property_decl_key, repeat(seq(";", $.property_decl_key))),

    property_decl_key: ($) => $._property_literal,

    channel_interface: ($) =>
      seq($._channelinterfaceheader, "{", optional($.parameters), "}"),

    _channelinterfaceheader: ($) =>
      seq("channelinterface", field("name", alias($._NAME, $.name)), optional($._interfaceinheritance)),

    simple: ($) =>
      seq(
        $._simplemoduleheader,
        "{",
        optional($.parameters),
        optional($.gates),
        "}",
      ),

    _simplemoduleheader: ($) =>
      seq("simple", field("name", alias($._NAME, $.name)), optional($._inheritance)),

    module: ($) =>
      seq(
        $._compoundmoduleheader,
        "{",
        optional($.parameters),
        optional($.gates),
        optional($.types),
        optional($.submodules),
        optional($.connections),
        "}",
      ),

    _compoundmoduleheader: ($) =>
      seq("module", field("name", alias($._NAME, $.name)), optional($._inheritance)),

    network: ($) =>
      seq(
        $._networkheader,
        "{",
        optional($.parameters),
        optional($.gates),
        optional($.types),
        optional($.submodules),
        optional($.connections),
        "}",
      ),

    _networkheader: ($) =>
      seq("network", field("name", alias($._NAME, $.name)), optional($._inheritance)),

    parameters: ($) =>
    choice($._params, seq("parameters", ":", $._params), seq("parameters", ":")),

    _params: ($) => repeat1($._paramsitem),

    parameter: ($) => choice($._param_typenamevalue, $._parampattern_value),

    _param_typenamevalue: ($) =>
      choice(
        seq($._param_typename, optional($.inline_properties)),
        seq(
          $._param_typename,
          optional($.inline_properties),
          "=",
          field("value", alias($.paramvalue, $.value)),
          optional($.inline_properties),
        ),
      ),

    _parampattern_value: ($) =>
      seq(
        $._parampattern,
        optional($.inline_properties),
        "=",
        field("value", alias($.paramvalue, $.value)),
      ),

    _property_namevalue: ($) =>
      choice(
        field("property_signature", $._property_name),
        prec.right(seq(field("property_signature", $._property_name), "(", optional($._property_tags), ")")),
      ),

    _property_literal: ($) =>
      repeat1(
        seq(
          choice(
            $._COMMONCHAR,
            $._STRINGCONSTANT,
            seq("(", $._property_literal, ")"),
          ),
        ),
      ),

    gate: ($) =>
      seq(
        $._gate_typenamesize,
        optional($.inline_properties),
        ";",
      ),

    _gate_typenamesize: ($) =>
      choice(
        seq($._gatetype, field("name", alias($._NAME, $.name))),
        seq($._gatetype, field("name", alias($._NAME, $.name)), field("vector", alias("[]", $.vector))),
        seq($._gatetype, field("name", alias($._NAME, $.name)), field("vector", alias($.sizevector, $.vector))),
        field("name", alias($._NAME, $.name)),
        seq(field("name", alias($._NAME, $.name)), "[", "]"),
        seq(field("name", alias($._NAME, $.name)), field("vector", alias($.sizevector, $.vector))),
      ),

    submodules: ($) =>
      seq(
        "submodules",
        ":",
        prec.right(repeat($.submodule)),
      ),

    submodule: ($) =>
      prec.right(
        choice(
          seq($._submoduleheader, ";"),
          seq(
            $._submoduleheader,
            "{",
            optional(optional($.parameters)),
            optional(optional($.gates)),
            "}",
            optional(";"),
          ),
        ),
      ),

    _submoduleheader: ($) =>
      prec.right(
        choice(
          seq(
            $._submodulename,
            ":",
            field("type", alias($._dottedname, $.type)),
            optional(field("condition", $.condition)),
          ),
          seq(
            $._submodulename,
            ":",
            field("like_expr", alias($.likeexpr, $.like_expr)),
            "like",
            field("like_type", alias($._dottedname, $.like_type)),
            optional(field("condition", $.condition)),
          ),
        ),
      ),

    connections: ($) =>
      prec.right(
        seq(
          "connections",
          alias(optional("allowunconnected"), $.allowunconnected),
          ":",
          repeat(
            choice(
              $.connection,
              $._loop_or_condition,
              alias($.ifblock, $.connection_group),
              alias($.forblock, $.connection_group),
            ),
          ),
        ),
      ),

    connection: ($) =>
      prec.right(
        choice(
          seq(
            field("src", alias($.connectionname, $.src)),
            field("arrow", $.arrow),
            field("dest", alias($.connectionname, $.dest)),
            optional($._loops_and_conditions),
            ";",
          ),
          seq(
            field("src", alias($.connectionname, $.src)),
            field("arrow", $.arrow),
            $._channelspec,
            field("arrow", $.arrow),
            field("dest", alias($.connectionname, $.dest)),
            optional($._loops_and_conditions),
            ";",
          ),
        ),
      ),

    arrow: ($) => choice("-->", "<--", "<-->"),

    _loops_and_conditions: ($) =>
      seq($._loop_or_condition, repeat(seq(",", $._loop_or_condition))),

    _loop_or_condition: ($) => choice($.loop, $.condition),

    _channelspec: ($) =>
      choice(
        $._channelspec_header,
        seq($._channelspec_header, "{", optional($._params), "}"),
        seq("{", $._params, "}"),
      ),

    _expression: ($) =>
      choice(
        $._simple_expr,
        $.call,
        $.member_call,
        $.object,
        $.array,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.conditional_expression,
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(field("operator", choice("-", "!", "~")), field("operand", $._expression)),
      ),

    binary_expression: ($) => {
      const table = [
        ["+", PREC.ADD],
        ["-", PREC.ADD],
        ["*", PREC.MUL],
        ["/", PREC.MUL],
        ["%", PREC.MUL],
        ["==", PREC.EQ],
        ["!=", PREC.EQ],
        [">", PREC.REL],
        [">=", PREC.REL],
        ["<", PREC.REL],
        ["<=", PREC.REL],
        ["<=>", PREC.SPACESHIP],
        ["=~", PREC.MATCH],
        ["&&", PREC.AND],
        ["||", PREC.OR],
        ["##", PREC.XOR],
        ["&", PREC.BITAND],
        ["|", PREC.BITOR],
        ["#", PREC.BITXOR],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
      ];
      return choice(
        ...table.map(([op, p]) =>
          prec.left(
            p,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // exponentiation is right-associative
        prec.right(
          PREC.POW,
          seq(
            field("left", $._expression),
            field("operator", "^"),
            field("right", $._expression),
          ),
        ),
      );
    },

    conditional_expression: ($) =>
      prec.right(
        PREC.TERNARY,
        seq(
          field("condition", $._expression),
          "?",
          field("consequence", $._expression),
          ":",
          field("alternative", $._expression),
        ),
      ),

    array: ($) =>
      seq(
        "[",
        optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))),
        "]",
      ),

    object: ($) =>
      choice(
        seq("{", optional($.keyvaluelist), "}"),
        seq($._NAME, "{", optional($.keyvaluelist), "}"),
        seq($._NAME, "::", $._NAME, "{", optional($.keyvaluelist), "}"),
        seq(
          $._NAME,
          "::",
          $._NAME,
          "::",
          $._NAME,
          "{",
          optional($.keyvaluelist),
          "}",
        ),
        seq(
          $._NAME,
          "::",
          $._NAME,
          "::",
          $._NAME,
          "::",
          $._NAME,
          "{",
          optional($.keyvaluelist),
          "}",
        ),
      ),

    keyvaluelist: ($) => seq($.keyvalue, repeat(seq(",", $.keyvalue)), optional(",")),

    keyvalue: ($) => seq($.key, ":", $._expression),

    key: ($) =>
      choice(
        $._STRINGCONSTANT,
        $._NAME,
        $._INTCONSTANT,
        $._REALCONSTANT,
        $.quantity,
        seq("-", $._INTCONSTANT),
        seq("-", $._REALCONSTANT),
        seq("-", $.quantity),
        "nan",
        "inf",
        seq("-", "inf"),
        "true",
        "false",
        "null",
        "nullptr",
      ),

    _qname: ($) =>
      prec.right(seq($._qname_elem, repeat(seq(".", $._qname_elem)))),

    operator: ($) =>
      prec(
        20,
        choice(
          "index",
          "typename",
          seq($._qname, ".", "index"),
          seq($._qname, ".", "typename"),
          seq("exists", "(", $._qname, ")"),
          seq("sizeof", "(", $._qname, ")"),
        ),
      ),

    quantity: ($) =>
      prec(
        10,
        choice(
          seq($.quantity, $._INTCONSTANT, $._NAME),
          seq($.quantity, $._realconstant_ext, $._NAME),
          seq($._INTCONSTANT, $._NAME),
          seq($._realconstant_ext, $._NAME),
        ),
      ),

    _realconstant_ext: ($) => choice($._REALCONSTANT, "inf", "nan"),

    _NAME: ($) => /[_a-zA-Z][_a-zA-Z0-9]*/,
    _INTCONSTANT: ($) => /\d+|0[xX][0-9a-fA-F]+/,
    _REALCONSTANT: ($) => /(\d+[eE][+-]?\d+)|(\d*\.\d+([eE][+-]?\d+)?)/,
    // Both `"..."` and `'...'` are string constants in NED, with `\`-escapes
    // and `\`-newline line continuation (see ned2.lex stringliteral states).
    _STRINGCONSTANT: ($) =>
      choice(/"([^"\\]|\\(.|\r?\n))*"/, /'([^'\\]|\\(.|\r?\n))*'/),
